--- a/slide4/app/src/main/res/layout/constraint_layout_1.xml
+++ b/slide4/app/src/main/res/layout/constraint_layout_1.xml
@@ -6,6 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:title="My App"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textview_hw"
