--- a/slide4/app/src/main/res/layout/constraint_layout_2.xml
+++ b/slide4/app/src/main/res/layout/constraint_layout_2.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:title="My App"
+        tools:ignore="MissingConstraints" />
+
     <EditText
         android:id="@+id/editTextText2"
         android:layout_width="241dp"
